
wxWindows 2.0 for Windows Change Log
------------------------------------

Alpha 17, November 22nd 1998
----------------------------

- More documentation updates, especially for
  wxLayoutWindow classes and debugging facilities.
- Changed wxDebugContext to use wxDebugLog instead
  of wxTrace.
- Now supports VC++ 6.0, and hopefully BC++ 5.0.
  However, DLL support may be broken for BC++ since
  VC++ 6 required changing of WXDLLEXPORT keyword
  position.
- Numerous miscellaneous changes.

Alpha 16, September 8th 1998
----------------------------

- Added wxSashWindow, wxSashLayoutWindow classes, and sashtest
  sample.
- Guilhem's socket classes added, plus wxsocket sample.
- A few more makefiles added.
- GnuWin32/BC++ compatibility mods.
- Further doc updates.
- wxProp updates for correct working with wxGTK.

Alpha 15, August 31st 1998
--------------------------

- wxBitmap debugged.
- wxDC::GetDepth added.
- Contribution added whereby wxBitmap will be
  converted to DC depth if they don't match.
- wxConfig API improved, documentation updated.
- Printing classes name conventions cleaned up.
- wxUpdateUIEvent now derives from wxCommandEvent
  so event can travel up the window hierachy.

Alpha 14, July 31st 1998
------------------------

- Toolbar API has been simplified, and now
  wxFrame::GetClientArea returns the available client
  area when toolbar, status bar etc. have been accounted for.
  wxFrame::CreateToolBar added in line with CreateStatusBar.
- Documentation updates, incl. for wxToolBar.
- New wxAcceleratorTable class plus wxFrame::SetAcceleratorTable.
- Various additions from other folk, e.g. streams, wxConfig
  changes, wxNotebook.
- Added wxDocMDIParentFrame, wxDocMDIChildFrame for doc/view.

Alpha 13, July 8th 1998
-----------------------

- Implemented wxPoint as identical to POINT on Windows, and
  altered wxDC wxPoint functions to use wxPoint directly in
  Windows functions, for efficiency.
- Cured wxASSERT bug in wxStatusBar95.